# exopypi

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml
exopypi/: __init__.py  main.py
tests/: test_mains.py
